Fix overflow of long stop names on schedules.
https://app.asana.com/0/234523466737812/279086348713518

--- a/apps/site/web/static/css/_schedule-v2.scss
+++ b/apps/site/web/static/css/_schedule-v2.scss
@@ -229,7 +229,6 @@ $z-index-vehicle-position: 2;
 
 .stop-info-column {
   min-width: 8rem;
-  white-space: nowrap;
 }
 
 @include vehicle-location-mode-color(".commuter-rail", $brand-commuter-rail);
